[package]
name = "tokio-redis"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>", "Armin Ronacher <armin.ronacher@active-4.com>"]

[dependencies]
log = "0.3.6"
mio = { git = "https://github.com/carllerche/mio" }
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-mio = { git = "https://github.com/alexcrichton/futures-rs" }
futures-io = { git = "https://github.com/alexcrichton/futures-rs" }

[dev-dependencies]
env_logger = "0.3.0"

